@startuml

title __SAMPLE's Class Diagram__\n

  package sample {
    class Controller {
        + costumerNameTextField : TextField
        + devicesListView : ListView
        + radioName : TextField
        + radioPrice : TextField
        + radioPower : TextField
        + radioWeight : TextField
        + am : CheckBox
        + fm : CheckBox
        + cd : CheckBox
        + usb : CheckBox
        + headphonesName : TextField
        + headphonesPrice : TextField
        + headphonesPower : TextField
        + headphonesWeight : TextField
        + headphonesMinFrequency : TextField
        + headphonesMaxFrequency : TextField
        + headphonesLength : TextField
        + garniture : CheckBox
        + speakersName : TextField
        + speakersPrice : TextField
        + speakersPower : TextField
        + speakersWeight : TextField
        + speakersMinFrequency : TextField
        + speakersMaxFrequency : TextField
        + portable : CheckBox
        + indexTextField : TextField
        + loadClick()
        + saveClick()
        + nameChanged()
        - updateControls()
        + removeClick()
        + addRadio()
        + addHeadphones()
        + addSpeakers()
    }
  }
  

  package sample {
    class Main {
        + start()
        {static} + main()
    }
  }
  

  abstract class Parameters {
      + Parameters()
      {abstract} + getRaw()
      {abstract} + getUnnamed()
      {abstract} + getNamed()
  }
  

  Controller o-- HiFiSystem : hiFiSystem
  Main -up-|> Application
  Main +-down- Parameters


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
